Fixed qt_tests to work with the changed cbor.h filename
Reviewed-by: Nobody here - will be reviewed later

--- a/Makefile.nmake
+++ b/Makefile.nmake
@@ -1,6 +1,6 @@
 CFLAGS = -W3
 
-TINYCBOR_HEADERS = src\cbor.h src\cborjson.h
+TINYCBOR_HEADERS = src\tinycbor.h src\cborjson.h
 TINYCBOR_SOURCES = \
 	src\cborerrorstrings.c \
 	src\cborencoder.c \
