Removed GCOV env variable in tests CMakelists.txt due to change in GCOV usage

--- a/TESTS/CMakeLists.txt
+++ b/TESTS/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../unity)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_runner)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
-set(TARGET_NAME "tiny_cbor_tests$ENV{BINARY_SUFFIX}")
+set(TARGET_NAME "tiny_cbor_tests")
 # tests includes
 FILE(
 	GLOB_RECURSE  
