--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 # includes
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tinycbor)
+ADD_GLOBALDIR(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 FILE(
 	GLOB_RECURSE  
 	tiny_cbor
 
-	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.*"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
 )
 
 message ("*********************************************************************")
@@ -14,5 +14,5 @@ message ("tiny_cbor = [[${tiny_cbor}]]")
 message ("*********************************************************************")
 
 CREATE_LIBRARY(tiny_cbor "${tiny_cbor}" "")
-#uncomment to compile tests
-#ADDSUBDIRS()
+
+ADDSUBDIRS()
