--- a/TESTS/CMakeLists.txt
+++ b/TESTS/CMakeLists.txt
@@ -1,39 +1,38 @@
+cmake_minimum_required(VERSION 2.6)
 
-# PAL's example code reference
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../mbed-client-pal/Examples/PlatformBSP/Include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../mbed-client-pal/Test/Unitest/Includes)
+if(NOT DEFINED ENABLED_UNITY_TESTS)
+    # disabled and compiled out tests if ENABLED_UNITY_TESTS variable not defined
+	return()
+endif()
 
-# includes
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../unity)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_runner)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests)
-
-set(TARGET_NAME "tiny_cbor_tests")
 # tests includes
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/runner)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/tests)
+
+set(TARGET_NAME "tinycbor_tests")
+
 FILE(
 	GLOB_RECURSE  
-	tiny_cbor_tests_src
+	tinycbor_tests_src
 
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_main/*.c"
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_main/*.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_main/*.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/*.c"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/*.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/*.h"
 
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_runner/*.c"
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_runner/*.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/runner/tiny_cbor_runner/*.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/runner/*.c"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/runner/*.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/runner/*.h"
 
-	"${CMAKE_CURRENT_SOURCE_DIR}/tests/*.c"
-	"${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/tests/*.h"
-	
-	${CMAKE_CURRENT_SOURCE_DIR}/../../mbed-client-pal/Test/Unitest/TestRunner/pal_test${OS_BRAND}.c
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/tests/*.c"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/tests/*.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/unity-tests/tinycbor_tests/tests/*.h"
 )
 
 message ("*********************************************************************")
-message ("tiny_cbor_tests_src = [[${tiny_cbor_tests_src}]]")
+message ("tinycbor_tests_src = [[${tinycbor_tests_src}]]")
 message ("*********************************************************************")
 
 
-CREATE_TEST_LIBRARY(${TARGET_NAME} "${tiny_cbor_tests_src}" "")
+CREATE_TEST_LIBRARY(${TARGET_NAME} "${tinycbor_tests_src}" "")
 
+ADDSUBDIRS()
