Rename lib name on Linux build to tinycbor
Reviewed-by: Jenia Kogan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,17 @@
 
-# includes
-ADD_GLOBALDIR(${CMAKE_CURRENT_SOURCE_DIR}/src)
+cmake_minimum_required (VERSION 3.5)
 
 FILE(
 	GLOB_RECURSE  
-	tiny_cbor
+	tinycbor
 
 	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
 )
 
 message ("*********************************************************************")
-message ("tiny_cbor = [[${tiny_cbor}]]")
+message ("tinycbor = [[${tinycbor}]]")
 message ("*********************************************************************")
 
-CREATE_LIBRARY(tiny_cbor "${tiny_cbor}" "")
+CREATE_LIBRARY(tinycbor "${tinycbor}" "")
 
 ADDSUBDIRS()
